--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ tree-sitter = "0.25.10"
 tree-sitter-java = "0.23.5"
 lazy_static = "1.5.0"
 streaming-iterator = "0.1"
+salsa = { version = "0.24.0", features = ["macros"] }
 ropey = "1.6.1"
 dashmap = "6.1.0"
