--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ salsa = { version = "0.24.0", features = ["macros"] }
 ropey = "1.6.1"
 dashmap = "6.1.0"
 clap = { version = "4.5.19", features = ["derive"] }
+zip = { version = "0.6", default-features = false, features = ["deflate"] }
